<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/buttonSearchHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/search_history" />
        
        <Button
            android:id="@+id/buttonGoToMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonSearchHistory"
            android:layout_alignBottom="@+id/buttonSearchHistory"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/buttonSearchHistory"
            android:text="@string/map" />

        <Button
            android:id="@+id/button_record_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/buttonGoToMap"
            android:layout_alignBottom="@+id/buttonSearchHistory"
            android:text="@string/location_record" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewCurrentTripInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/current_trip_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>